Ignores .xcurserstate files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 *.pbxproj
 
 *.xcuserstate
+
+*.xcuserstate
+
+tap-me.xcodeproj/project.xcworkspace/xcuserdata/ethomas35.xcuserdatad/UserInterfaceState.xcuserstate
