--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 *.xcuserstate
 
 tap-me.xcodeproj/project.xcworkspace/xcuserdata/ethomas35.xcuserdatad/UserInterfaceState.xcuserstate
+
+tap-me.xcodeproj/project.pbxproj
